@@ -76,6 +76,7 @@ NEW CHANGES:
              (+) move libudev to separate module udev;
              (+) remove libsystemd-network;
              (+) move libgudev to separate module libgudev;
+             (+) remove chkconfig support;
 
 CHANGES WITH 214:
 
